# django-lab

./: README.md
django-for-begginers/: pyproject.toml
django-for-begginers/chapter_03/: manage.py
django-for-begginers/chapter_03/chapter_03/: asgi.py  settings.py  urls.py  wsgi.py
django-for-begginers/chapter_03/pages/: urls.py  views.py
django-for-begginers/django_project/django_project/: settings.py
django-for-begginers/helloworld/helloworld/: settings.py  urls.py
django-for-begginers/helloworld/pages/: urls.py  views.py
