[tool.poetry]
name = "django-for-begginers"
version = "0.1.0"
description = ""
authors = ["rodrigo bernardo medeiros <rodrimedeiros@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
